test: fix AttachmentControllerIT